--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           </p>
         </div>
         <div class="title right-title">
-          <a href="index2.html">
+          <a href="ind3.html">
             <div class="add add-logo">
               <div class="circle"></div>
               <div class="plus">
