--- a/index2.html
+++ b/index2.html
@@ -39,7 +39,7 @@
           </form>
         </div>
         <div class="add-logo">
-          <a href="index4.html">
+          <a href="ind3.html">
             
               <div class="circle"></div>
               <div class="plus">
